[gd_scene format=3 uid="uid://3cdngw2pcdrt"]

[ext_resource type="Script" uid="uid://80kl10p8d3vr" path="res://scripts/player.gd" id="1_uxov2"]
[ext_resource type="Texture2D" uid="uid://cxvinoa412j14" path="res://sprites/player/Shadowtest.png" id="2_3nfmf"]
[ext_resource type="Texture2D" uid="uid://dv13fqnvg025x" path="res://sprites/weapon/Sword.png" id="3_f46kd"]
[ext_resource type="Texture2D" uid="uid://dn757lvyvfymk" path="res://sprites/player/walking/back/Walkbck1&3.png" id="4_i8sra"]
[ext_resource type="Texture2D" uid="uid://djpryvb8xparg" path="res://sprites/player/walking/back/Walkbck2.png" id="5_4vq5b"]
[ext_resource type="Texture2D" uid="uid://fkf0bgnbj5r0" path="res://sprites/player/walking/back/Walkbck4.png" id="6_3nfmf"]
[ext_resource type="Texture2D" uid="uid://dny7x1cl0reqb" path="res://sprites/player/walking/fwd/Walkfwd4.png" id="7_4vq5b"]
[ext_resource type="Texture2D" uid="uid://rpm1pme40h7j" path="res://sprites/player/walking/fwd/Walkfwd1&3.png" id="7_42cpl"]
[ext_resource type="Texture2D" uid="uid://by8w3f5n0tmam" path="res://sprites/player/walking/fwd/walkfwd2.png" id="8_vqq2l"]
[ext_resource type="Texture2D" uid="uid://sge3blr5ib34" path="res://sprites/player/walking/left/WalkLFT1&3.png" id="10_vqq2l"]
[ext_resource type="Texture2D" uid="uid://dhdgrcleunewc" path="res://sprites/player/walking/right/Walkrt1&3.png" id="11_r673r"]
[ext_resource type="Texture2D" uid="uid://cqh0l87v4f4ox" path="res://sprites/player/walking/right/Walkrt2.png" id="12_mqnmn"]
[ext_resource type="Texture2D" uid="uid://bgn0cvlprdbsa" path="res://sprites/player/walking/right/Walkrt4.png" id="13_5esnd"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_r673r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fos0i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dxm6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgr22"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03owx"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mqnmn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5esnd"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_w1o2u"]

[sub_resource type="Animation" id="Animation_3nfmf"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("moving:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [SubResource("CompressedTexture2D_r673r"), SubResource("CompressedTexture2D_mqnmn"), SubResource("CompressedTexture2D_5esnd"), SubResource("CompressedTexture2D_w1o2u")]
}

[sub_resource type="Animation" id="Animation_42cpl"]
resource_name = "bckwdWalk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("moving:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_i8sra"), ExtResource("5_4vq5b"), ExtResource("4_i8sra"), ExtResource("6_3nfmf")]
}

[sub_resource type="Animation" id="Animation_vqq2l"]
resource_name = "fwdWalk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("moving:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_42cpl"), ExtResource("8_vqq2l"), ExtResource("7_42cpl"), ExtResource("7_4vq5b")]
}

[sub_resource type="Animation" id="Animation_r673r"]
resource_name = "fwsSwdAtk"

[sub_resource type="Animation" id="Animation_mqnmn"]
resource_name = "leftWalk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("moving:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("10_vqq2l"), ExtResource("5_4vq5b"), ExtResource("10_vqq2l"), ExtResource("6_3nfmf")]
}

[sub_resource type="Animation" id="Animation_5esnd"]
resource_name = "rightWalk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("moving:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("11_r673r"), ExtResource("12_mqnmn"), ExtResource("11_r673r"), ExtResource("13_5esnd")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1o2u"]
_data = {
&"RESET": SubResource("Animation_3nfmf"),
&"bckwdWalk": SubResource("Animation_42cpl"),
&"fwdWalk": SubResource("Animation_vqq2l"),
&"fwsSwdAtk": SubResource("Animation_r673r"),
&"leftWalk": SubResource("Animation_mqnmn"),
&"rightWalk": SubResource("Animation_5esnd")
}

[node name="player" type="CharacterBody2D" unique_id=431234177 groups=["player"]]
collision_mask = 6
script = ExtResource("1_uxov2")

[node name="playerBox" type="CollisionPolygon2D" parent="." unique_id=352496878]
polygon = PackedVector2Array(1, -13, 4, -13, 8, -10, 8, -6, 6, -3, 9, -1, 9, 6, 6, 8, 8, 12, 7, 14, 3, 14, 2, 13, 0, 14, -2, 14, -4, 13, -4, 11, -2, 9, -5, 7, -5, -1, -3, -3, -5, -6, -5, -10, -2, -13)

[node name="stand" type="Sprite2D" parent="." unique_id=1579311054]
position = Vector2(1, 0)
texture = ExtResource("2_3nfmf")

[node name="moving" type="Sprite2D" parent="." unique_id=1646823923]
texture = SubResource("CompressedTexture2D_r673r")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=1765195337]
target_desired_distance = 4.0
path_max_distance = 10.0

[node name="leftAtk" type="Area2D" parent="." unique_id=339344686]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftAtk" unique_id=96235281]
position = Vector2(-15, 0)
scale = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_fos0i")
disabled = true

[node name="rightAtk" type="Area2D" parent="." unique_id=1499584987]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightAtk" unique_id=1543054859]
position = Vector2(15, 0)
scale = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_3dxm6")
disabled = true

[node name="upAtk" type="Area2D" parent="." unique_id=2030400027]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="upAtk" unique_id=881274357]
position = Vector2(0, -15)
scale = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_lgr22")
disabled = true

[node name="downAtk" type="Area2D" parent="." unique_id=159946394]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="downAtk" unique_id=1861297563]
position = Vector2(0, 15)
scale = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_03owx")
disabled = true

[node name="mainCamera" type="Camera2D" parent="." unique_id=1676976802]
zoom = Vector2(3, 3)

[node name="currentWeapon" type="Sprite2D" parent="." unique_id=585684252]
position = Vector2(165, -85)
texture = ExtResource("3_f46kd")

[node name="currentItem" type="Sprite2D" parent="." unique_id=404453650]
position = Vector2(125, -85)
scale = Vector2(0.75, 0.75)

[node name="anim" type="AnimationPlayer" parent="." unique_id=612462367]
libraries/ = SubResource("AnimationLibrary_w1o2u")

[node name="mana" type="Node2D" parent="." unique_id=1467675544]

[node name="hearts" type="Node2D" parent="." unique_id=340067647]

[connection signal="body_entered" from="leftAtk" to="." method="_on_left_atk_body_entered"]
[connection signal="body_entered" from="rightAtk" to="." method="_on_right_atk_body_entered"]
[connection signal="body_entered" from="upAtk" to="." method="_on_up_atk_body_entered"]
[connection signal="body_entered" from="downAtk" to="." method="_on_down_atk_body_entered"]
